@@ -1,3 +1,5 @@
+/*      $OpenBSD: monitor.h,v 1.3 2002/03/26 03:24:01 stevesk Exp $     */
+
 /*
  * Copyright 2002 Niels Provos <provos@citi.umich.edu>
  * All rights reserved.
